# muskat

./: .gitignore  CHANGELOG.md  Cargo.toml  Compilerflags  Makefile  PERF.md  README.md  bacon.toml
benches/: benchmarks.rs
res/: example.json  sl002.json  sl003.json  sl004.json  sl005.json  sl005b.json  sl006.json  sl007.json  sl007b.json  sl007c.json  sl007d.json  sl007d2.json  sl008.json  sl009.json  sl012.json
src/: analyze_observation.rs  bidding_role.rs  bounds.rs  card.rs  card_points.rs  cards.rs  deal.rs  deck.rs  dist.rs  dto.rs  format.cpp  game_type.rs  lib.rs  main.cpp  main.rs  minimax_role.rs  monte_carlo.rs  observed_gameplay.rs  open_analysis_performance.rs  open_situation_analyzer.rs  open_situation_solver.rs  partial_trick.rs  position.rs  power.rs  rng.rs  role.rs  situation.rs  stats.rs  trick.rs  trick_yield.rs  util.rs
src/include/: abstract_player.h  analyze_game.h  card.h  cards.h  cheater.h  concurrent_monte_carlo.h  contract.h  game.h  human_player.h  logger.h  parse_game_record.h  perfect_information_sample_analysis.h  random_player.h  score.h  set_of_cards.h  situation.h  situation_solver.h  spinlock.h  statistics.h  trick.h  uniform_sit_distribution.h  world_simulation.h
src/include/player/: abstract_player.h  cheater.h  human_player.h  random_player.h  uniform_sampler.h
src/open_situation_analyzer/: score_for_possible_plays.rs
src/open_situation_solver/: bounds_and_preference.rs  bounds_cache.rs  tests.rs
src/situation/: partial_trick.rs
test/: Makefile
test/include/: test_drillings.h  test_perforations.h  test_segmented_polygon.h
test/src/: test_main.cpp
test/src/include/: test_cards.h  test_set_of_cards.h  test_solver.h
tests/: performance.rs  reg.rs  regression.rs  regression_open_solver.rs
