[package]
name = "muskat"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Gruner <jogru0@gmail.com>"]
description = "Skat bot"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jogru0/muskat"
readme = "README.md"
keywords = ["skat", "bot", "card", "game", "solver"]
categories = ["games", "algorithms"]
exclude = [".vscode"]

[dependencies]
