[package]
name = "muskat"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Gruner <jogru0@gmail.com>"]
description = "Skat bot"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jogru0/muskat"
readme = "README.md"
keywords = ["skat", "bot", "card", "game", "solver"]
categories = ["games", "algorithms"]
exclude = [".vscode"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
derive_more = { version = "2.0.1", features = [
    "add",
    "add_assign",
    "not",
    "sum",
] }
foldhash = "0.2.0"
itertools = "0.14.0"
rand = "0.9.2"
rand_xoshiro = "0.7.0"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
static_assertions = "1.1.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"

# Optimizations and no debug symbols overhead, but still debug_assertions. 
[profile.dev]
opt-level = 3
debug = false

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = "0.7.0"

[[bench]]
name = "benchmarks"
harness = false
